k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: livinvicta
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: fraguinha/livinvicta.com-backend:latest@sha256:a93892838d3bf186439568bc3e97893b2205ba1caaf56b881c15584dbf919452 # {"$imagepolicy": "flux-system:livinvicta-backend-policy"}
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: livinvicta
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
