k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: livinvicta
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: fraguinha/livinvicta.com-frontend:latest@sha256:a883db152c4d183bf086b0ddbd25f2c036b870e7eafd3e48aff2210802c37a02 # {"$imagepolicy": "flux-system:livinvicta-frontend-policy"}
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: livinvicta
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
